load spotify
