# backend/src/users/dto/get-user.dto.ts
@@ -1,6 +1,91 @@
 import { ApiProperty } from "@nestjs/swagger";
-import { Expose } from "class-transformer";
-import { IsNotEmpty, IsString } from "class-validator";
+import { Expose, Type } from "class-transformer";
+import { IsArray, IsNotEmpty, IsOptional, IsString } from "class-validator";
+
+class ArtistResponseDto {
+	@Expose()
+	@ApiProperty({
+		description: "id",
+		example: 1,
+	})
+	@IsNotEmpty()
+	id: number;
+
+	@Expose()
+	@ApiProperty({
+		description: "name",
+		example: "artist name",
+	})
+	@IsString()
+	@IsNotEmpty()
+	name: string;
+}
+
+class AlbumResponseDto {
+	@Expose()
+	@ApiProperty({
+		description: "id",
+		example: 1,
+	})
+	@IsNotEmpty()
+	id: number;
+
+	@Expose()
+	@ApiProperty({
+		description: "name",
+		example: "album name",
+	})
+	@IsString()
+	@IsNotEmpty()
+	name: string;
+
+	@Expose()
+	@ApiProperty({
+		description: "releaseDate",
+		example: "2021-01-01",
+	})
+	@IsString()
+	@IsNotEmpty()
+	releaseDate: string;
+
+	@Expose()
+	@ApiProperty({
+		description: "artists",
+		type: [ArtistResponseDto],
+		example: [{ id: 1, name: "artist name" }],
+	})
+	@Type(() => ArtistResponseDto)
+	@IsArray()
+	@IsNotEmpty()
+	artists: ArtistResponseDto[];
+}
+
+class PlayListResponseDto {
+	@Expose()
+	@ApiProperty({
+		description: "id",
+		example: 1,
+	})
+	@IsNotEmpty()
+	id: number;
+
+	@Expose()
+	@ApiProperty({
+		description: "albums",
+		type: [AlbumResponseDto],
+		example: [
+			{
+				id: 1,
+				name: "album name",
+				releaseDate: "2021-01-01",
+				artists: [{ id: 1, name: "artist name" }],
+			},
+		],
+	})
+	@IsString()
+	@IsNotEmpty()
+	albums: AlbumResponseDto[];
+}
 
 export class UserResponseDto {
 	@Expose()
@@ -11,4 +96,27 @@ export class UserResponseDto {
 	@IsString()
 	@IsNotEmpty()
 	name: string;
+
+	@Expose()
+	@ApiProperty({
+		description: "playlists",
+		type: [PlayListResponseDto],
+		example: [
+			{
+				id: 1,
+				albums: [
+					{
+						id: 1,
+						name: "album name",
+						releaseDate: "2021-01-01",
+						artists: [{ id: 1, name: "artist name" }],
+					},
+				],
+			},
+		],
+	})
+	@Type(() => PlayListResponseDto)
+	@IsArray()
+	@IsOptional()
+	playlists: PlayListResponseDto[];
 }
